[ant] imporove JvmArgs aggregation and defaults handling